# KALIsc

./: .gitignore  CMakeLists.txt  README  a.out  build.sh  cp_tags.capnp  helpers.cpp  helpers.h  kali_structs.h  kalicnc.cpp  kalicnc.h  kalidb.cpp  kalidb.h  kalis.cpp  kalisc.h  todo.txt  ttdata.capnp  ttreader.cpp
clients/: capnp_make_py.sh  cp_tags.capnp.c++  cp_tags.capnp.h  cp_tags_capnp_cython.cpp  cp_tags_capnp_cython.pyx  savetags.py  ttdata.capnp
include/: CLogic.h  CTimeTag.h  CTimeTag.h.bak
libs/linux/: libtimetag32.so.bak  libtimetagARM.so.bak
libs/win32/: CTimeTagLib.lib  CTimeTagLibDebug.lib
libs/win64/: CTimeTagLib.lib.bak  CTimeTagLibDebug.lib
tools/: capnp_make_py.sh  capnp_to_tsv.py  cp_tags.capnp  ttdata_capnp_cython.pyx
